[Bugs] Fix preview card not showing image, click on feature icon not selecting feature in adding new property

--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,10 @@ a {
   text-decoration: none;
   color: black;
 }
+
+svg {
+  pointer-events: none;
+}
 /* End: Tag overrides --------------------------------------------------------- */
 
 /* Start: Font ---------------------------------------------------------------- */
@@ -384,4 +388,8 @@ a {
 .focusable:focus {
   border-color: var(--light-brand-color);
   box-shadow: 0 0 0 0.25rem var(--light-brand-color);
+}
+
+.bubble-click {
+  pointer-events: none;
 }
